app/assets/stylesheets/modules/trainer_search_results.css.scss
.search-map {
  margin-top: 1em;
}

.row.profile-box {
  height: 6em;
  background: #fff;
  border: solid 1px #ccc;
  margin-top: 0.75em;
  margin-left: 0;
  margin-right: 0.3em;
}

.row.pag-links {
  margin-top: 0.75em;
  margin-left: 0;
}

.row .avatar {
  margin-left: 0.35em;
  padding-top: 5px;
  height: 100%;
  padding-bottom: 5px;
}

.row .avatar img {
  height: 100%
}

.profile-box .row .profile-text {
  margin-left: 1.2em;
}

.profile-box .row .profile-text h4 {
  margin: 0;
  font-size: 1.4375em;
}

.profile-box h6 .button {
  margin-top: 0.7em;
}

.profile-text h6.address {
  margin: 0;
  font-size: 0.8em;
}

.profile-text h6 span.count {
  color: #f88a36;
  margin-left: 5px;
}

